--- a/PopulationClass.ipynb
+++ b/PopulationClass.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,15 +37,33 @@
     "    def f(self):\n",
     "        pass\n",
     "    \n",
+    "    @abstractmethod\n",
+    "    def g(self):\n",
+    "        pass\n",
+    "    \n",
+    "    @abstractmethod\n",
+    "    def resource_decrease(self):\n",
+    "        pass\n",
+    "    \n",
     "    def max_capacity(self):\n",
-    "        self.f(self.height())\n",
+    "        return self.f(self.height())\n",
     "        \n",
-    "    def energy_pulse(self, alfa1, alfa2, betta1, betta2, gamma1, gamma2, psi1, psi2, delta_x, delta_y, i0, j0):\n",
+    "    def energy_pulse(self, *args):\n",
     "        pass\n",
     "        \n",
     "    def speed_height(self, t):\n",
-    "        "
+    "        return self.g(self.energy_pulse(), self.height())\n",
+    "    \n",
+    "    def resourse_volume(self, t):\n",
+    "        return self.resourse_volume(self, t - 1) + self.speed_height() - self.resource_decrease()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
